Navbar and Banner part complete

--- a/index.html
+++ b/index.html
@@ -14,7 +14,61 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- header part start -->
+    <header class="col-lg-8 col-md-12 mx-auto p-2">
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="container-fluid">
+                <a class="navbar-brand fw-bold fs-3" href="#">Shopper</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto me-auto mb-2 mb-lg-0 fw-bold">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">Catalog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">Shop</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">Pages</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="#">Docs</a>
+                        </li>
+                    </ul>
+                    <form">
+                    <button class="btn btn-dark text-light" type="submit">Buy Now for $49</button>
+                    </form>
+              </div>
+            </div>
+          </nav>
+    </header>
+    <!-- header part end -->
+
+    <!-- banner part start -->
+    <section class="col-lg-8 col-md-12 mx-auto p-3">
+        <div class="row my-5 align-items-center">
+            <div class="col-lg-5 col-md-6 col-sm-12">
+                <h1>Flexible E-Commerce Bootstrap Template</h1>
+                <p>Shopper is a beautiful, simple and flexible e-commerce template built on top of Bootstrap. It includes dozens of components and pages you can use “as is” or customize to build exactly what you need.</p>
+                <button class="p-2 btn btn-dark text-light">Find Out More</button>
+            </div>
+            <div class="col-lg-7 col-md-6 col-sm-12">
+                <img class="img-fluid" src="images/banner-img.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- banner part end -->
+    <hr>
+
+
 
     <!-- bootstrap js -->
     <link rel="stylesheet" href="js/bootstrap.bundle.min.js">
