Four card in a row with topbar complete

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <!-- header part start -->
-    <header class="col-lg-8 col-md-12 mx-auto p-2">
+    <header class="col-xxl-10 col-xl-10 col-lg-12 col-md-12 mx-auto p-2">
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <a class="navbar-brand fw-bold fs-3" href="#">Shopper</a>
@@ -44,7 +44,7 @@
                         </li>
                     </ul>
                     <form">
-                    <button class="btn btn-dark text-light" type="submit">Buy Now for $49</button>
+                    <button class="btn btn-tomato text-light" type="submit">Buy Now for $49</button>
                     </form>
               </div>
             </div>
@@ -52,13 +52,14 @@
     </header>
     <!-- header part end -->
 
+
     <!-- banner part start -->
-    <section class="col-lg-8 col-md-12 mx-auto p-3">
+    <section class="col-xxl-10 col-xl-10 col-lg-12 col-md-12 mx-auto p-3 my-3">
         <div class="row my-5 align-items-center">
             <div class="col-lg-5 col-md-6 col-sm-12">
                 <h1>Flexible E-Commerce Bootstrap Template</h1>
                 <p>Shopper is a beautiful, simple and flexible e-commerce template built on top of Bootstrap. It includes dozens of components and pages you can use “as is” or customize to build exactly what you need.</p>
-                <button class="p-2 btn btn-dark text-light">Find Out More</button>
+                <button class="p-2 btn btn-tomato text-light">Find Out More</button>
             </div>
             <div class="col-lg-7 col-md-6 col-sm-12">
                 <img class="img-fluid" src="images/banner-img.png" alt="">
@@ -67,7 +68,49 @@
     </section>
     <!-- banner part end -->
     <hr>
-
+    
+   <!-- horizontal card part start -->
+    <section class="col-xxl-10 col-xl-10 col-lg-12 col-md-12 mx-auto p-3">
+        <div class="row my-3 align-items-center justify-content-between">
+            <div class="row col-lg-3 col-md-6 col-sm-12 my-2">
+                <div class="col-2 ms-auto">
+                    <i class="fas fa-home hcard-icon"></i>
+                </div>
+                <div class="col-10 hcard-detail">
+                    <h6>8 HOMEPAGE VARIATIONS</h6>
+                    <p>Including a landing page with an anchor navigation.</p>
+                </div>
+            </div>
+            <div class="row col-lg-3 col-md-6 col-sm-12 my-2">
+                <div class="col-2 ms-auto">
+                    <i class="far fa-file-alt hcard-icon"></i>
+                </div>
+                <div class="col-10 hcard-detail">
+                    <h6>30+ SUPPORT PAGES</h6>
+                    <p>Shop, account, blog and other inner pages.</p>
+                </div>
+            </div>
+            <div class="row col-lg-3 col-md-6 col-sm-12 my-2">
+                <div class="col-2 ms-auto">
+                    <i class="fas fa-bars hcard-icon"></i>
+                </div>
+                <div class="col-10 hcard-detail">
+                    <h6>10+ NAVIGATION VARIATIONS</h6>
+                    <p>Multiple horizontal and vertical navigation options.</p>
+                </div>
+            </div>
+            <div class="row col-lg-3 col-md-6 col-sm-12 my-2">
+                <div class="col-2 ms-auto">
+                    <i class="fas fa-shopping-bag hcard-icon"></i>
+                </div>
+                <div class="col-10 hcard-detail">
+                    <h6>8 PRODUCT CARD VARIATIONS</h6>
+                    <p>To showcase and sell anything you want.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- horizontal card part end -->
 
 
     <!-- bootstrap js -->
