--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </li>
                     </ul>
                     <form">
-                    <button class="btn btn-tomato text-light" type="submit">Buy Now for $49</button>
+                    <button class="btn btn-dark text-light" type="submit">Buy Now for $49</button>
                     </form>
               </div>
             </div>
@@ -59,7 +59,7 @@
             <div class="col-lg-5 col-md-6 col-sm-12">
                 <h1>Flexible E-Commerce Bootstrap Template</h1>
                 <p>Shopper is a beautiful, simple and flexible e-commerce template built on top of Bootstrap. It includes dozens of components and pages you can use “as is” or customize to build exactly what you need.</p>
-                <button class="p-2 btn btn-tomato text-light">Find Out More</button>
+                <button class="p-2 btn btn-dark text-light">Find Out More</button>
             </div>
             <div class="col-lg-7 col-md-6 col-sm-12">
                 <img class="img-fluid" src="images/banner-img.png" alt="">
@@ -111,6 +111,112 @@
         </div>
     </section>
     <!-- horizontal card part end -->
+
+    <!-- cards part start -->
+    <section class="bg-light">
+        <div class="col-xxl-10 col-xl-10 col-lg-12 col-md-12 mx-auto py-5 p-3 bg-warning bg-light">
+
+            <div class="row text-center my-3">
+                <h1>Homepages</h1>
+                <h6 class="mt-2 mb-5 col-lg-8 col-md-9 col-sm-8 mx-auto">8 homepage variations including a sample landing page with anchor navigation.</h6>
+            </div>
+
+            <div class="row my-3 mx-2 justify-content-center">
+                <div class="row col-md-4 col-sm-12 my-3">
+                    <div class="card bg-transparent border-0">
+                        <a href="#" class="card-link">
+                            <img src="images/card/card-img-1.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-center text-dark fw-bold">Default</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="row col-md-4 col-sm-12 mx-3 my-3">
+                    <div class="card bg-transparent border-0">
+                        <a href="#" class="card-link">
+                            <img src="images/card/card-img-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-center text-dark fw-bold">Classic</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="row col-md-4 col-sm-12 my-3">
+                    <div class="card bg-transparent border-0">
+                        <a href="#" class="card-link">
+                            <img src="images/card/card-img-3.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-center text-dark fw-bold">Fashion</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="row col-md-4 col-sm-12 my-3">
+                    <div class="card bg-transparent border-0">
+                        <a href="#" class="card-link">
+                            <img src="images/card/card-img-4.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-center text-dark fw-bold">Boxes</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="row col-md-4 col-sm-12 mx-3 my-3">
+                    <div class="card bg-transparent border-0">
+                        <a href="#" class="card-link">
+                            <img src="images/card/card-img-5.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-center text-dark fw-bold">Simple</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="row col-md-4 col-sm-12 my-3">
+                    <div class="card bg-transparent border-0">
+                        <a href="#" class="card-link">
+                            <img src="images/card/card-img-6.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-center text-dark fw-bold">Asymmetric</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="row col-md-4 col-sm-12 my-3">
+                    <div class="card bg-transparent border-0">
+                        <a href="#" class="card-link">
+                            <img src="images/card/card-img-7.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-center text-dark fw-bold">Sidenav</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="row col-md-4 col-sm-12 mx-3 my-3">
+                    <div class="card bg-transparent border-0">
+                        <a href="#" class="card-link">
+                            <img src="images/card/card-img-8.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-center text-dark fw-bold">Landing</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="row col-md-4 col-sm-12 my-3">
+                    <div class="card bg-transparent border-0">
+                        <a href="#" class="card-link">
+                            <img src="images/card/card-img-2.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-center text-dark fw-bold">Asymmetric</p>
+                            </div>
+                        </a>
+                    </div>
+                </div>    
+            </div>
+
+        </div>
+    </section>
+    <!-- cards part end -->
 
 
     <!-- bootstrap js -->
