Button color changed

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </li>
                     </ul>
                     <form">
-                    <button class="btn btn-dark text-light" type="submit">Buy Now for $49</button>
+                    <button class="btn btn-tomato" type="submit">Buy Now for $49</button>
                     </form>
               </div>
             </div>
@@ -59,7 +59,7 @@
             <div class="col-lg-5 col-md-6 col-sm-12">
                 <h1>Flexible E-Commerce Bootstrap Template</h1>
                 <p>Shopper is a beautiful, simple and flexible e-commerce template built on top of Bootstrap. It includes dozens of components and pages you can use “as is” or customize to build exactly what you need.</p>
-                <button class="p-2 btn btn-dark text-light">Find Out More</button>
+                <button class="p-2 btn btn-tomato">Find Out More</button>
             </div>
             <div class="col-lg-7 col-md-6 col-sm-12">
                 <img class="img-fluid" src="images/banner-img.png" alt="">
