Headers image part complete

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <!-- header part start -->
     <header class="col-xxl-10 col-xl-10 col-lg-12 col-md-12 mx-auto p-2">
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light mt-3">
             <div class="container-fluid">
                 <a class="navbar-brand fw-bold fs-3" href="#">Shopper</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -218,9 +218,38 @@
     </section>
     <!-- cards part end -->
 
+    <!-- headers images part start -->
+    <section class="bg-dark">
+        <div class="col-xxl-10 col-xl-10 col-lg-12 col-md-12 mx-auto py-5 p-3">
+            <div class="row text-center my-5 text-light">
+                <h1>Headers Sample</h1>
+            </div>
+            <div class="row m-2 my-3">
+                <img src="images/header/header-img-1.png" alt="">
+            </div>
+            <div class="row m-2 my-3">
+                <img src="images/header/header-img-2.png" alt="">
+            </div>
+            <div class="row m-2 my-3">
+                <img src="images/header/header-img-3.png" alt="">
+            </div>
+            <div class="row m-2 my-3">
+                <img src="images/header/header-img-4.png" alt="">
+            </div>
+            <div class="row m-2 my-3">
+                <img src="images/header/header-img-5.png" alt="">
+            </div>
+            <div class="row m-2 my-3">
+                <img src="images/header/header-img-6.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- headers images part end -->
+
 
     <!-- bootstrap js -->
     <link rel="stylesheet" href="js/bootstrap.bundle.min.js">
+    
     <!-- fontawesome js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js" integrity="sha512-fzff82+8pzHnwA1mQ0dzz9/E0B+ZRizq08yZfya66INZBz86qKTCt9MLU0NCNIgaMJCgeyhujhasnFUsYMsi0Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
