Mega Menu Dropdown complete

--- a/index.html
+++ b/index.html
@@ -257,6 +257,58 @@
     <!-- headers images part end -->
 
 
+    <!-- mega menu part start -->
+    <section class="bg-light">
+        <div class="col-xxl-10 col-xl-10 col-lg-12 col-md-12 mx-auto py-5 p-3">
+            <div class="container">
+                <div class="row text-center my-4 text-dark">
+                    <h1>Mega Menu Dropdowns</h1>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <img class="img-fluid my-3 mx-1 border border-1" src="images/dropdown/dropdown-img-1.jpg" alt="">
+                    </div>
+                    <div class="col-lg-6 col-md-12 col-sm-12">
+                        <img class="img-fluid my-3 mx-1 border border-1" src="images/dropdown/dropdown-img-2.jpg" alt="">
+                    </div>
+                    <div class="col-lg-5 col-md-12 col-sm-12">
+                        <img class="img-fluid my-3 mx-1 border border-1" src="images/dropdown/dropdown-img-3.jpg" alt="">
+                    </div>
+                    <div class="col-lg-7 col-md-12 col-sm-12">
+                        <img class="img-fluid my-3 mx-1 border border-1" src="images/dropdown/dropdown-img-4.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- mega menu part end -->
+
+
+    <!-- key features part start -->
+    <section>
+        <div class="col-xxl-10 col-xl-10 col-lg-12 col-md-12 mx-auto py-5 p-3">
+
+            <div class="container">
+                <div class="row text-center my-3">
+                    <h1>Key Features</h1>
+                    <h6 class="mt-2 mb-5 col-lg-8 col-md-9 col-sm-8 mx-auto">Something that makes Shopper stand out against competitors.</h6>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- key features part end -->
+
+    <!-- <footer class="bg-dark">
+        <div class="container d-flex flex-column align-items-center justify-content-center">
+            <div class="row py-5 text-light text-center">
+                <h2 class="w-50">Bootstrap the development of your online store with Shopper now!</h2>
+                <button class="btn my-4 btn-tomato footer-btn" type="submit">Buy Now for $49</button>
+            </div>
+            
+        </div>
+    </footer> -->
+
     <!-- bootstrap js -->
     <link rel="stylesheet" href="js/bootstrap.bundle.min.js">
     
