--- a/index.html
+++ b/index.html
@@ -299,15 +299,16 @@
     </section>
     <!-- key features part end -->
 
-    <!-- <footer class="bg-dark">
-        <div class="container d-flex flex-column align-items-center justify-content-center">
-            <div class="row py-5 text-light text-center">
-                <h2 class="w-50">Bootstrap the development of your online store with Shopper now!</h2>
-                <button class="btn my-4 btn-tomato footer-btn" type="submit">Buy Now for $49</button>
+    <!-- footer part start -->
+    <footer class="bg-dark">
+        <div class="container py-5 d-flex flex-column align-items-center justify-items-center">
+            <div class="row text-light text-center justify-content-center">
+                <h1 class="footer-heading my-5">Bootstrap the development of your online store with Shopper now!</h1>
             </div>
-            
+            <button class="btn mb-5 btn-tomato footer-btn" type="submit">Buy Now for $49</button>
         </div>
-    </footer> -->
+    </footer>
+    <!-- footer part end -->
 
     <!-- bootstrap js -->
     <link rel="stylesheet" href="js/bootstrap.bundle.min.js">
